// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manifest Utilities getManifestInFileSystem returns the manifest 1`] = `
Array [
  Object {
    "url": "https://github.com/foo/bar/blob/master/foo.md",
  },
  Object {
    "url": "https://github.com/foo/bar/blob/master/bar.md",
  },
  Object {
    "url": "https://github.com/foo/bar/blob/master/baz.md",
  },
]
`;

exports[`Manifest Utilities validateAndFilterManifest filters out manifest items that are invalid 1`] = `
Array [
  Object {
    "labels": Array [
      "foo",
      "bar",
    ],
    "personas": Array [
      "Developer",
      "Designer",
    ],
    "url": "https://github.com/foo/bar/blob/master/bar.md",
  },
  Object {
    "url": "https://github.com/foo/bar/blob/master/baz.md",
  },
]
`;
